<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColorLight"
    android:orientation="vertical"
    tools:context=".ClassroomCreateActivity">

    <TextView
        android:id="@+id/classroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="64dp"
        android:text="@string/create_classroom"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/className"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/enter_classroom_name"
        android:inputType="textPersonName"
        android:textColor="@color/black2"
        android:autofillHints=""
        android:layout_marginStart="18dp" />

    <EditText
        android:id="@+id/classDesp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/enter_classroom_description"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginStart="18dp" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/add_students_number"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginStart="18dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="120dp"
        android:background="@color/mainColorDark"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="120dp" />
</LinearLayout>