<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColorLight"
    android:orientation="vertical"
    tools:context=".NewGroupActivity">

    <ImageView
        android:id="@+id/group_icon"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="64dp"
        android:contentDescription="@string/select_picture"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/group_icon_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="120dp"
        android:background="@color/mainColorDark"
        android:text="@string/upload_group_icon"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="120dp" />

    <EditText
        android:id="@+id/group_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:hint="@string/enter_group_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/group_des_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:hint="@string/enter_group_description"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="120dp"
        android:background="@color/mainColorDark"
        android:text="@string/create"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="120dp" />
</LinearLayout>