<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColorLight"
    android:orientation="vertical"
    tools:context=".ClassroomLoginActivity">

    <TextView
        android:id="@+id/vaartalAppClassroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/vaartalapp_classroom"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/descriptionClassroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="18dp"
        android:text="@string/create_your_own_classrooms_as_a_teacher_or_join_one_as_a_student"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="18dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="118dp"
        android:text="@string/continue_as"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="24dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/teacher"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="24dp" />

        <RadioButton
            android:id="@+id/student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="18dp"
            android:text="@string/student"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_marginStart="24dp" />
    </RadioGroup>


</LinearLayout>