<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColorLight"
    android:orientation="vertical"
    tools:context=".StudentJoinClassroom">

    <TextView
        android:id="@+id/studentLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/student_login"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:layout_marginStart="18dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:textSize="18sp"
        android:autofillHints=""
        android:layout_marginStart="18dp" />

    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/enter_link_to_join"
        android:inputType="textPersonName"
        android:autofillHints=""
        android:layout_marginStart="18dp" />
</LinearLayout>