<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColorLight"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="64dp"
        android:contentDescription="@string/enter_profile_name"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/udatePictureChatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/mainColorDark"
        android:text="@string/select_picture"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="18dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_profile_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/statusEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="18dp"
        android:layout_marginRight="18dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/how_do_you_feel"
        android:importantForAutofill="no"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/UpdateProfileButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:background="@color/mainColorDark"
        android:text="@string/update_profile"
        android:textColor="@color/black"
        android:textSize="18sp" />

</LinearLayout>